# claude-agent-relay-plugin

./: .gitignore  README.md
.claude-plugin/: plugin.json
client/: mcp-config.example.json
server/: README.md  config.example.toml  pyproject.toml
server/claude_relay/: blobs.py  cli.py  config.py  server.py  store.py  toon.py
server/systemd/: claude-relay.service
skills/connect-as-client/: SKILL.md
skills/create-session/: SKILL.md
skills/onboard/: SKILL.md
skills/relay-status/: SKILL.md
skills/send-file/: SKILL.md
skills/send-message/: SKILL.md
skills/setup-relay-server/: SKILL.md
skills/tail-session/: SKILL.md
