[project]
name = "claude-relay"
version = "0.1.0"
description = "MCP relay server for direct agent-to-agent communication on a LAN"
authors = [{name = "Daniel Rosehill"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "uvicorn[standard]>=0.30",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
claude-relay = "claude_relay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_relay"]
